--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
 astroid==3.0.1
 beautifulsoup4==4.12.2
+bs4==0.0.1
 certifi==2023.7.22
 charset-normalizer==3.3.2
 dill==0.3.7
 idna==3.4
 isort==5.12.0
+lxml==4.9.3
 mccabe==0.7.0
+numpy==1.26.1
+pandas==2.1.2
 platformdirs==3.11.0
 pylint==3.0.2
+python-dateutil==2.8.2
+pytz==2023.3.post1
 requests==2.31.0
+six==1.16.0
 soupsieve==2.5
 tomlkit==0.12.2
+tzdata==2023.3
 urllib3==2.0.7
