--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ bs4==0.0.1
 certifi==2023.7.22
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==7.1.2
+click-didyoumean==0.3.0
 colorama==0.4.6
 constantly==23.10.4
 cryptography==41.0.5
@@ -22,6 +24,7 @@ jmespath==1.0.1
 lxml==4.9.3
 mccabe==0.7.0
 numpy==1.26.1
+p==1.4.0
 packaging==23.2
 pandas==2.1.2
 parsel==1.8.1
@@ -33,6 +36,7 @@ pyasn1-modules==0.3.0
 pycparser==2.21
 PyDispatcher==2.0.7
 pylint==3.0.2
+PyMySQL==1.1.0
 pyOpenSSL==23.3.0
 python-dateutil==2.8.2
 pytz==2023.3.post1
