--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,9 @@ constantly==23.10.4
 cryptography==41.0.5
 cssselect==1.2.0
 dill==0.3.7
+fake-useragent==1.3.0
 filelock==3.13.1
+h11==0.14.0
 hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
@@ -24,10 +26,12 @@ jmespath==1.0.1
 lxml==4.9.3
 mccabe==0.7.0
 numpy==1.26.1
+outcome==1.3.0.post0
 p==1.4.0
 packaging==23.2
 pandas==2.1.2
 parsel==1.8.1
+Pillow==10.1.0
 platformdirs==3.11.0
 pretty-errors==1.2.25
 Protego==0.3.0
@@ -38,20 +42,28 @@ PyDispatcher==2.0.7
 pylint==3.0.2
 PyMySQL==1.1.0
 pyOpenSSL==23.3.0
+PySocks==1.7.1
+pytesseract==0.3.10
 python-dateutil==2.8.2
 pytz==2023.3.post1
 queuelib==1.6.2
 requests==2.31.0
 requests-file==1.5.1
 Scrapy==2.11.0
+selenium==4.15.2
 service-identity==23.1.0
 six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
 soupsieve==2.5
 tldextract==5.1.0
 tomlkit==0.12.2
+trio==0.23.1
+trio-websocket==0.11.1
 Twisted==22.10.0
 typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.0.7
 w3lib==2.1.2
+wsproto==1.2.0
 zope.interface==6.1
