--- a/requirements.txt
+++ b/requirements.txt
@@ -3,28 +3,35 @@ attrs==23.1.0
 Automat==22.10.0
 beautifulsoup4==4.12.2
 bs4==0.0.1
+cachetools==5.3.2
 certifi==2023.7.22
 cffi==1.16.0
+chardet==5.2.0
 charset-normalizer==3.3.2
 click==7.1.2
 click-didyoumean==0.3.0
 colorama==0.4.6
 constantly==23.10.4
+coverage==7.3.2
 cryptography==41.0.5
 cssselect==1.2.0
 dill==0.3.7
+distlib==0.3.7
 fake-useragent==1.3.0
 filelock==3.13.1
+flake8==6.1.0
 h11==0.14.0
 hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
+iniconfig==2.0.0
 isort==5.12.0
 itemadapter==0.8.0
 itemloaders==1.1.0
 jmespath==1.0.1
 lxml==4.9.3
 mccabe==0.7.0
+mock==5.1.0
 numpy==1.26.1
 outcome==1.3.0.post0
 p==1.4.0
@@ -33,23 +40,31 @@ pandas==2.1.2
 parsel==1.8.1
 Pillow==10.1.0
 platformdirs==3.11.0
+pluggy==1.3.0
 pretty-errors==1.2.25
 Protego==0.3.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pycodestyle==2.11.1
 pycparser==2.21
 PyDispatcher==2.0.7
+pyflakes==3.1.0
 pylint==3.0.2
 PyMySQL==1.1.0
 pyOpenSSL==23.3.0
+pyproject-api==1.6.1
 PySocks==1.7.1
 pytesseract==0.3.10
+pytest==7.4.3
+pytest-cov==4.1.0
 python-dateutil==2.8.2
 pytz==2023.3.post1
 queuelib==1.6.2
+redis==5.0.1
 requests==2.31.0
 requests-file==1.5.1
 Scrapy==2.11.0
+scrapy-redis==0.7.3
 selenium==4.15.2
 service-identity==23.1.0
 six==1.16.0
@@ -58,12 +73,14 @@ sortedcontainers==2.4.0
 soupsieve==2.5
 tldextract==5.1.0
 tomlkit==0.12.2
+tox==4.11.3
 trio==0.23.1
 trio-websocket==0.11.1
 Twisted==22.10.0
 typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.0.7
+virtualenv==20.24.6
 w3lib==2.1.2
 wsproto==1.2.0
 zope.interface==6.1
