--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 astroid==3.0.1
+asyncio==3.4.3
 attrs==23.1.0
 Automat==22.10.0
 beautifulsoup4==4.12.2
@@ -12,14 +13,17 @@ click==7.1.2
 click-didyoumean==0.3.0
 colorama==0.4.6
 constantly==23.10.4
+contourpy==1.2.0
 coverage==7.3.2
 cryptography==41.0.5
 cssselect==1.2.0
+cycler==0.12.1
 dill==0.3.7
 distlib==0.3.7
 fake-useragent==1.3.0
 filelock==3.13.1
 flake8==6.1.0
+fonttools==4.44.0
 h11==0.14.0
 hyperlink==21.0.0
 idna==3.4
@@ -29,7 +33,9 @@ isort==5.12.0
 itemadapter==0.8.0
 itemloaders==1.1.0
 jmespath==1.0.1
+kiwisolver==1.4.5
 lxml==4.9.3
+matplotlib==3.8.1
 mccabe==0.7.0
 mock==5.1.0
 numpy==1.26.1
@@ -52,6 +58,7 @@ pyflakes==3.1.0
 pylint==3.0.2
 PyMySQL==1.1.0
 pyOpenSSL==23.3.0
+pyparsing==3.1.1
 pyproject-api==1.6.1
 PySocks==1.7.1
 pytesseract==0.3.10
@@ -68,6 +75,7 @@ scrapy-redis==0.7.3
 selenium==4.15.2
 service-identity==23.1.0
 six==1.16.0
+sklearn==0.0.post11
 sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.5
