--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ iniconfig==2.0.0
 isort==5.12.0
 itemadapter==0.8.0
 itemloaders==1.1.0
+jieba==0.42.1
 jmespath==1.0.1
 kiwisolver==1.4.5
 lxml==4.9.3
@@ -72,11 +73,13 @@ requests==2.31.0
 requests-file==1.5.1
 Scrapy==2.11.0
 scrapy-redis==0.7.3
+seaborn==0.13.0
 selenium==4.15.2
 service-identity==23.1.0
 six==1.16.0
 sklearn==0.0.post11
 sniffio==1.3.0
+snownlp==0.12.3
 sortedcontainers==2.4.0
 soupsieve==2.5
 tldextract==5.1.0
