--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 astroid==3.0.1
+async-timeout==4.0.3
 asyncio==3.4.3
 attrs==23.1.0
 Automat==22.10.0
@@ -20,6 +21,7 @@ cssselect==1.2.0
 cycler==0.12.1
 dill==0.3.7
 distlib==0.3.7
+exceptiongroup==1.1.3
 fake-useragent==1.3.0
 filelock==3.13.1
 flake8==6.1.0
@@ -27,6 +29,7 @@ fonttools==4.44.0
 h11==0.14.0
 hyperlink==21.0.0
 idna==3.4
+importlib-resources==6.1.1
 incremental==22.10.0
 iniconfig==2.0.0
 isort==5.12.0
@@ -83,6 +86,7 @@ snownlp==0.12.3
 sortedcontainers==2.4.0
 soupsieve==2.5
 tldextract==5.1.0
+tomli==2.0.1
 tomlkit==0.12.2
 tox==4.11.3
 trio==0.23.1
@@ -94,4 +98,5 @@ urllib3==2.0.7
 virtualenv==20.24.6
 w3lib==2.1.2
 wsproto==1.2.0
+zipp==3.17.0
 zope.interface==6.1
