--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ cssselect==1.2.0
 cycler==0.12.1
 dill==0.3.7
 distlib==0.3.7
+et-xmlfile==1.1.0
 exceptiongroup==1.1.3
 fake-useragent==1.3.0
 filelock==3.13.1
@@ -37,12 +38,14 @@ itemadapter==0.8.0
 itemloaders==1.1.0
 jieba==0.42.1
 jmespath==1.0.1
+joblib==1.3.2
 kiwisolver==1.4.5
 lxml==4.9.3
 matplotlib==3.8.1
 mccabe==0.7.0
 mock==5.1.0
 numpy==1.26.1
+openpyxl==3.1.2
 outcome==1.3.0.post0
 p==1.4.0
 packaging==23.2
@@ -74,6 +77,8 @@ queuelib==1.6.2
 redis==5.0.1
 requests==2.31.0
 requests-file==1.5.1
+scikit-learn==1.3.2
+scipy==1.11.3
 Scrapy==2.11.0
 scrapy-redis==0.7.3
 seaborn==0.13.0
@@ -85,6 +90,7 @@ sniffio==1.3.0
 snownlp==0.12.3
 sortedcontainers==2.4.0
 soupsieve==2.5
+threadpoolctl==3.2.0
 tldextract==5.1.0
 tomli==2.0.1
 tomlkit==0.12.2
@@ -98,5 +104,6 @@ urllib3==2.0.7
 virtualenv==20.24.6
 w3lib==2.1.2
 wsproto==1.2.0
+xlrd==2.0.1
 zipp==3.17.0
 zope.interface==6.1
