--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ fake-useragent==1.3.0
 filelock==3.13.1
 flake8==6.1.0
 fonttools==4.44.0
+fsspec==2023.10.0
 h11==0.14.0
 hyperlink==21.0.0
 idna==3.4
@@ -37,13 +38,17 @@ isort==5.12.0
 itemadapter==0.8.0
 itemloaders==1.1.0
 jieba==0.42.1
+Jinja2==3.1.2
 jmespath==1.0.1
 joblib==1.3.2
 kiwisolver==1.4.5
 lxml==4.9.3
+MarkupSafe==2.1.3
 matplotlib==3.8.1
 mccabe==0.7.0
 mock==5.1.0
+mpmath==1.3.0
+networkx==3.2.1
 numpy==1.26.1
 openpyxl==3.1.2
 outcome==1.3.0.post0
@@ -89,11 +94,16 @@ sniffio==1.3.0
 snownlp==0.12.3
 sortedcontainers==2.4.0
 soupsieve==2.5
+sympy==1.12
 threadpoolctl==3.2.0
 tldextract==5.1.0
 tomli==2.0.1
 tomlkit==0.12.2
+torch==2.1.0
+torchdata==0.7.0
+torchtext==0.16.0
 tox==4.11.3
+tqdm==4.66.1
 trio==0.23.1
 trio-websocket==0.11.1
 Twisted==22.10.0
