--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ coverage==7.3.2
 cryptography==41.0.5
 cssselect==1.2.0
 cycler==0.12.1
+decopatch==1.4.10
 dill==0.3.7
 distlib==0.3.7
 et-xmlfile==1.1.0
@@ -43,6 +44,7 @@ jmespath==1.0.1
 joblib==1.3.2
 kiwisolver==1.4.5
 lxml==4.9.3
+makefun==1.15.2
 MarkupSafe==2.1.3
 matplotlib==3.8.1
 mccabe==0.7.0
