--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+asgiref==3.7.2
 astroid==3.0.1
 async-timeout==4.0.3
 asyncio==3.4.3
@@ -19,9 +20,9 @@ coverage==7.3.2
 cryptography==41.0.5
 cssselect==1.2.0
 cycler==0.12.1
-decopatch==1.4.10
 dill==0.3.7
 distlib==0.3.7
+Django==4.2.7
 et-xmlfile==1.1.0
 exceptiongroup==1.1.3
 fake-useragent==1.3.0
@@ -44,7 +45,6 @@ jmespath==1.0.1
 joblib==1.3.2
 kiwisolver==1.4.5
 lxml==4.9.3
-makefun==1.15.2
 MarkupSafe==2.1.3
 matplotlib==3.8.1
 mccabe==0.7.0
@@ -92,10 +92,12 @@ seaborn==0.13.0
 selenium==4.15.2
 service-identity==23.1.0
 six==1.16.0
+sklearn==0.0.post11
 sniffio==1.3.0
 snownlp==0.12.3
 sortedcontainers==2.4.0
 soupsieve==2.5
+sqlparse==0.4.4
 sympy==1.12
 threadpoolctl==3.2.0
 tldextract==5.1.0
