--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,14 @@ asyncio==3.4.3
 attrs==23.1.0
 Automat==22.10.0
 beautifulsoup4==4.12.2
+blinker==1.7.0
 bs4==0.0.1
 cachetools==5.3.2
 certifi==2023.7.22
 cffi==1.16.0
 chardet==5.2.0
 charset-normalizer==3.3.2
-click==7.1.2
+click==8.1.7
 click-didyoumean==0.3.0
 colorama==0.4.6
 constantly==23.10.4
@@ -20,6 +21,7 @@ coverage==7.3.2
 cryptography==41.0.5
 cssselect==1.2.0
 cycler==0.12.1
+decopatch==1.4.10
 dill==0.3.7
 distlib==0.3.7
 Django==4.2.7
@@ -28,6 +30,8 @@ exceptiongroup==1.1.3
 fake-useragent==1.3.0
 filelock==3.13.1
 flake8==6.1.0
+Flask==3.0.0
+Flask-SQLAlchemy==3.1.1
 fonttools==4.44.0
 fsspec==2023.10.0
 h11==0.14.0
@@ -39,12 +43,14 @@ iniconfig==2.0.0
 isort==5.12.0
 itemadapter==0.8.0
 itemloaders==1.1.0
+itsdangerous==2.1.2
 jieba==0.42.1
 Jinja2==3.1.2
 jmespath==1.0.1
 joblib==1.3.2
 kiwisolver==1.4.5
 lxml==4.9.3
+makefun==1.15.2
 MarkupSafe==2.1.3
 matplotlib==3.8.1
 mccabe==0.7.0
@@ -96,6 +102,7 @@ sniffio==1.3.0
 snownlp==0.12.3
 sortedcontainers==2.4.0
 soupsieve==2.5
+SQLAlchemy==2.0.23
 sqlparse==0.4.4
 sympy==1.12
 threadpoolctl==3.2.0
@@ -115,6 +122,7 @@ tzdata==2023.3
 urllib3==2.0.7
 virtualenv==20.24.6
 w3lib==2.1.2
+Werkzeug==3.0.1
 wsproto==1.2.0
 xlrd==2.0.1
 zipp==3.17.0
