--- a/requirements.txt
+++ b/requirements.txt
@@ -25,12 +25,14 @@ decopatch==1.4.10
 dill==0.3.7
 distlib==0.3.7
 Django==4.2.7
+django-altauth==0.4.1
 et-xmlfile==1.1.0
 exceptiongroup==1.1.3
 fake-useragent==1.3.0
 filelock==3.13.1
 flake8==6.1.0
 Flask==3.0.0
+Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 fonttools==4.44.0
 fsspec==2023.10.0
@@ -90,6 +92,7 @@ queuelib==1.6.2
 redis==5.0.1
 requests==2.31.0
 requests-file==1.5.1
+rsa==4.9
 scikit-learn==1.3.2
 scipy==1.11.3
 Scrapy==2.11.0
