--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+aiohttp==3.9.1
+aiosignal==1.3.1
 asgiref==3.7.2
 astroid==3.0.1
 async-timeout==4.0.3
@@ -35,6 +37,7 @@ Flask==3.0.0
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 fonttools==4.44.0
+frozenlist==1.4.0
 fsspec==2023.10.0
 h11==0.14.0
 hyperlink==21.0.0
@@ -58,6 +61,7 @@ matplotlib==3.8.1
 mccabe==0.7.0
 mock==5.1.0
 mpmath==1.3.0
+multidict==6.0.4
 networkx==3.2.1
 numpy==1.26.1
 openpyxl==3.1.2
@@ -129,5 +133,6 @@ Werkzeug==3.0.1
 wrapt==1.16.0
 wsproto==1.2.0
 xlrd==2.0.1
+yarl==1.9.3
 zipp==3.17.0
 zope.interface==6.1
