--- a/requirements.txt
+++ b/requirements.txt
@@ -6,16 +6,18 @@ async-timeout==4.0.3
 asyncio==3.4.3
 attrs==23.1.0
 Automat==22.10.0
+autopep8==2.0.4
+Babel==2.13.1
 beautifulsoup4==4.12.2
 blinker==1.7.0
 bs4==0.0.1
 cachetools==5.3.2
+cel-python==0.1.5
 certifi==2023.7.22
 cffi==1.16.0
 chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
-click-didyoumean==0.3.0
 colorama==0.4.6
 constantly==23.10.4
 contourpy==1.2.0
@@ -54,6 +56,7 @@ Jinja2==3.1.2
 jmespath==1.0.1
 joblib==1.3.2
 kiwisolver==1.4.5
+lark-parser==0.12.0
 lxml==4.9.3
 makefun==1.15.2
 MarkupSafe==2.1.3
@@ -67,15 +70,17 @@ numpy==1.26.1
 opencv-python==4.8.1.78
 openpyxl==3.1.2
 outcome==1.3.0.post0
-p==1.4.0
 packaging==23.2
 pandas==2.1.2
 parsel==1.8.1
 Pillow==10.1.0
+pipenv==2023.3.20
 platformdirs==3.11.0
 pluggy==1.3.0
 pretty-errors==1.2.25
 Protego==0.3.0
+protobuf==4.25.1
+protovalidate==0.3.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycodestyle==2.11.1
@@ -93,6 +98,7 @@ pytest==7.4.3
 pytest-cov==4.1.0
 python-dateutil==2.8.2
 pytz==2023.3.post1
+PyYAML==6.0.1
 queuelib==1.6.2
 redis==5.0.1
 requests==2.31.0
@@ -130,6 +136,7 @@ typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.0.7
 virtualenv==20.24.6
+virtualenv-clone==0.5.7
 w3lib==2.1.2
 Werkzeug==3.0.1
 wrapt==1.16.0
