--- a/requirements.txt
+++ b/requirements.txt
@@ -66,7 +66,7 @@ networkx==3.2.1
 numpy==1.26.1
 openpyxl==3.1.2
 outcome==1.3.0.post0
-p==1.4.0
+#p==1.4.0
 packaging==23.2
 pandas==2.1.2
 parsel==1.8.1
@@ -119,6 +119,7 @@ tomlkit==0.12.2
 torch==2.1.0
 torchdata==0.7.0
 torchtext==0.16.0
+tornado==6.4
 tox==4.11.3
 tqdm==4.66.1
 trio==0.23.1
