--- a/requirements.txt
+++ b/requirements.txt
@@ -64,9 +64,10 @@ mpmath==1.3.0
 multidict==6.0.4
 networkx==3.2.1
 numpy==1.26.1
+opencv-python==4.8.1.78
 openpyxl==3.1.2
 outcome==1.3.0.post0
-#p==1.4.0
+p==1.4.0
 packaging==23.2
 pandas==2.1.2
 parsel==1.8.1
