--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+absl-py==2.0.0
+accelerate==0.25.0
 aiohttp==3.9.1
 aiosignal==1.3.1
 asgiref==3.7.2
@@ -17,6 +19,7 @@ certifi==2023.11.17
 cffi==1.16.0
 chardet==5.2.0
 charset-normalizer==3.3.2
+chex==0.1.85
 click==8.1.7
 colorama==0.4.6
 constantly==23.10.4
@@ -26,11 +29,13 @@ cryptography==41.0.5
 cssselect==1.2.0
 cycler==0.12.1
 decopatch==1.4.10
+diffusers==0.24.0
 dill==0.3.7
 distlib==0.3.7
 Django==4.2.7
 django-altauth==0.4.1
 et-xmlfile==1.1.0
+etils==1.6.0
 exceptiongroup==1.1.3
 fake-useragent==1.3.0
 filelock==3.13.1
@@ -38,12 +43,16 @@ flake8==6.1.0
 Flask==3.0.0
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
+flax==0.7.5
 fonttools==4.44.0
 frozenlist==1.4.0
 fsspec==2023.10.0
 h11==0.14.0
+huggingface-hub==0.20.1
 hyperlink==21.0.0
 idna==3.4
+image==1.5.33
+importlib-metadata==7.0.1
 importlib-resources==6.1.1
 incremental==22.10.0
 iniconfig==2.0.0
@@ -51,6 +60,8 @@ isort==5.12.0
 itemadapter==0.8.0
 itemloaders==1.1.0
 itsdangerous==2.1.2
+jax==0.4.23
+jaxlib==0.4.23
 jieba==0.42.1
 Jinja2==3.1.2
 jmespath==1.0.1
@@ -59,16 +70,24 @@ kiwisolver==1.4.5
 lark-parser==0.12.0
 lxml==4.9.3
 makefun==1.15.2
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib==3.8.1
 mccabe==0.7.0
+mdurl==0.1.2
+ml-dtypes==0.3.1
 mock==5.1.0
 mpmath==1.3.0
+msgpack==1.0.7
 multidict==6.0.4
+nest-asyncio==1.5.8
 networkx==3.2.1
 numpy==1.26.1
 opencv-python==4.8.1.78
 openpyxl==3.1.2
+opt-einsum==3.3.0
+optax==0.1.7
+orbax-checkpoint==0.4.8
 outcome==1.3.0.post0
 packaging==23.2
 pandas==2.1.2
@@ -81,12 +100,14 @@ pretty-errors==1.2.25
 Protego==0.3.0
 protobuf==4.25.1
 protovalidate==0.3.0
+psutil==5.9.7
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycodestyle==2.11.1
 pycparser==2.21
 PyDispatcher==2.0.7
 pyflakes==3.1.0
+Pygments==2.17.2
 pylint==3.0.2
 PyMySQL==1.1.0
 pyOpenSSL==23.3.0
@@ -101,9 +122,12 @@ pytz==2023.3.post1
 PyYAML==6.0.1
 queuelib==1.6.2
 redis==5.0.1
+regex==2023.12.25
 requests==2.31.0
 requests-file==1.5.1
+rich==13.7.0
 rsa==4.9
+safetensors==0.4.1
 scikit-learn==1.3.2
 scipy==1.11.3
 Scrapy==2.11.0
@@ -119,16 +143,20 @@ soupsieve==2.5
 SQLAlchemy==2.0.23
 sqlparse==0.4.4
 sympy==1.12
+tensorstore==0.1.51
 threadpoolctl==3.2.0
 tldextract==5.1.0
+tokenizers==0.15.0
 tomli==2.0.1
 tomlkit==0.12.2
+toolz==0.12.0
 torch==2.1.0
 torchdata==0.7.0
 torchtext==0.16.0
 tornado==6.4
 tox==4.11.3
 tqdm==4.66.1
+transformers==4.36.2
 trio==0.23.1
 trio-websocket==0.11.1
 Twisted==22.10.0
