--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,23 @@
-absl-py==2.0.0
-accelerate==0.25.0
 aiohttp==3.9.1
 aiosignal==1.3.1
+annotated-types==0.6.0
+anyio==4.3.0
 asgiref==3.7.2
-astroid==3.0.2
+astroid==3.0.1
 async-timeout==4.0.3
 asyncio==3.4.3
 attrs==23.1.0
 Automat==22.10.0
-autopep8==2.0.4
-Babel==2.14.0
 beautifulsoup4==4.12.2
 blinker==1.7.0
 bs4==0.0.1
 cachetools==5.3.2
-cel-python==0.1.5
-certifi==2023.11.17
+certifi==2023.7.22
 cffi==1.16.0
 chardet==5.2.0
 charset-normalizer==3.3.2
-chex==0.1.85
 click==8.1.7
+click-didyoumean==0.3.0
 colorama==0.4.6
 constantly==23.10.4
 contourpy==1.2.0
@@ -28,14 +25,14 @@ coverage==7.3.2
 cryptography==41.0.5
 cssselect==1.2.0
 cycler==0.12.1
+dataclasses-json==0.6.4
 decopatch==1.4.10
-diffusers==0.24.0
 dill==0.3.7
 distlib==0.3.7
+distro==1.9.0
 Django==4.2.7
 django-altauth==0.4.1
 et-xmlfile==1.1.0
-etils==1.6.0
 exceptiongroup==1.1.3
 fake-useragent==1.3.0
 filelock==3.13.1
@@ -43,16 +40,14 @@ flake8==6.1.0
 Flask==3.0.0
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
-flax==0.7.5
 fonttools==4.44.0
 frozenlist==1.4.0
 fsspec==2023.10.0
 h11==0.14.0
-huggingface-hub==0.20.1
+httpcore==1.0.4
+httpx==0.27.0
 hyperlink==21.0.0
 idna==3.4
-image==1.5.33
-importlib-metadata==7.0.1
 importlib-resources==6.1.1
 incremental==22.10.0
 iniconfig==2.0.0
@@ -60,54 +55,52 @@ isort==5.12.0
 itemadapter==0.8.0
 itemloaders==1.1.0
 itsdangerous==2.1.2
-jax==0.4.23
-jaxlib==0.4.23
 jieba==0.42.1
 Jinja2==3.1.2
 jmespath==1.0.1
 joblib==1.3.2
+jsonpatch==1.33
+jsonpointer==2.4
 kiwisolver==1.4.5
-lark-parser==0.12.0
+langchain==0.1.13
+langchain-community==0.0.29
+langchain-core==0.1.33
+langchain-text-splitters==0.0.1
+langsmith==0.1.31
 lxml==4.9.3
 makefun==1.15.2
-markdown-it-py==3.0.0
 MarkupSafe==2.1.3
+marshmallow==3.21.1
 matplotlib==3.8.1
 mccabe==0.7.0
-mdurl==0.1.2
-ml-dtypes==0.3.1
 mock==5.1.0
 mpmath==1.3.0
-msgpack==1.0.7
 multidict==6.0.4
-nest-asyncio==1.5.8
+mypy-extensions==1.0.0
 networkx==3.2.1
 numpy==1.26.1
+openai==1.13.3
 opencv-python==4.8.1.78
 openpyxl==3.1.2
-opt-einsum==3.3.0
-optax==0.1.7
-orbax-checkpoint==0.4.8
+orjson==3.9.15
 outcome==1.3.0.post0
+p==1.4.0
 packaging==23.2
 pandas==2.1.2
 parsel==1.8.1
 Pillow==10.1.0
-pipenv==2023.3.20
 platformdirs==3.11.0
 pluggy==1.3.0
 pretty-errors==1.2.25
 Protego==0.3.0
-protobuf==4.25.1
-protovalidate==0.3.0
-psutil==5.9.7
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycodestyle==2.11.1
 pycparser==2.21
+pydantic==2.6.3
+pydantic_core==2.16.3
 PyDispatcher==2.0.7
 pyflakes==3.1.0
-Pygments==2.17.2
 pylint==3.0.2
 PyMySQL==1.1.0
 pyOpenSSL==23.3.0
@@ -122,12 +115,9 @@ pytz==2023.3.post1
 PyYAML==6.0.1
 queuelib==1.6.2
 redis==5.0.1
-regex==2023.12.25
 requests==2.31.0
 requests-file==1.5.1
-rich==13.7.0
 rsa==4.9
-safetensors==0.4.1
 scikit-learn==1.3.2
 scipy==1.11.3
 Scrapy==2.11.0
@@ -143,28 +133,25 @@ soupsieve==2.5
 SQLAlchemy==2.0.23
 sqlparse==0.4.4
 sympy==1.12
-tensorstore==0.1.51
+tenacity==8.2.3
 threadpoolctl==3.2.0
 tldextract==5.1.0
-tokenizers==0.15.0
 tomli==2.0.1
 tomlkit==0.12.2
-toolz==0.12.0
 torch==2.1.0
 torchdata==0.7.0
 torchtext==0.16.0
 tornado==6.4
 tox==4.11.3
 tqdm==4.66.1
-transformers==4.36.2
 trio==0.23.1
 trio-websocket==0.11.1
 Twisted==22.10.0
-typing_extensions==4.9.0
+typing-inspect==0.9.0
+typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.0.7
 virtualenv==20.24.6
-virtualenv-clone==0.5.7
 w3lib==2.1.2
 Werkzeug==3.0.1
 wrapt==1.16.0
