--- a/requirements.txt
+++ b/requirements.txt
@@ -1,296 +1,20 @@
-aiohttp==3.10.11
-aiosignal==1.3.1
-annotated-types==0.6.0
-anyio==4.3.0
-appnope==0.1.4
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asgiref==3.7.2
-astroid==3.0.1
-asttokens==2.4.1
-async-lru==2.0.4
-async-timeout==4.0.3
-asyncio==3.4.3
-attrs==23.1.0
-Automat==22.10.0
-Babel==2.14.0
-backoff==2.2.1
-bcrypt==4.1.2
-beautifulsoup4==4.12.3
-bleach==6.1.0
-blinker==1.7.0
-bs4==0.0.1
-build==1.1.1
-cachetools==5.3.2
-certifi==2024.7.4
-cffi==1.16.0
-chardet==5.2.0
-charset-normalizer==3.3.2
-chroma-hnswlib==0.7.3
+openai==1.30.1
+langchain==0.2.0
+langchain-openai==0.1.7
+langchain-core==0.2.1
+langchain-community==0.2.0
+langchain-experimental==0.0.59
+langchain-text-splitters==0.2.0
+langsmith==0.1.65
 chromadb==0.4.24
-ClassMaker==0.1
-click==8.1.7
-click-didyoumean==0.3.0
-colorama==0.4.6
-coloredlogs==15.0.1
-comm==0.2.2
-constantly==23.10.4
-contourpy==1.2.0
-coverage==7.3.2
-cryptography==44.0.1
-cssselect==1.2.0
-cycler==0.12.1
-dataclasses-json==0.6.4
-dataclasses-json-speakeasy==0.5.11
-debugpy==1.8.1
-decopatch==1.4.10
-decorator==5.1.1
-defusedxml==0.7.1
-Deprecated==1.2.14
-dill==0.3.7
-distlib==0.3.7
-distro==1.9.0
-Django==5.2.2
-django-altauth==0.4.1
-emoji==2.10.1
-et-xmlfile==1.1.0
-exceptiongroup==1.1.3
-executing==2.0.1
 faiss-cpu==1.8.0
-fake-useragent==1.3.0
-fastapi==0.110.0
-fastjsonschema==2.19.1
-filelock==3.13.1
-filetype==1.2.0
-flake8==6.1.0
-Flask==3.0.0
-Flask-Login==0.6.3
-Flask-SQLAlchemy==3.1.1
-flatbuffers==24.3.7
-fonttools==4.44.0
-fqdn==1.5.1
-frozenlist==1.4.0
-fsspec==2023.10.0
-google-auth==2.29.0
-googleapis-common-protos==1.63.0
-grpcio==1.62.1
-h11==0.14.0
-httpcore==1.0.4
-httptools==0.6.1
-httpx==0.27.0
-huggingface-hub==0.21.4
-humanfriendly==10.0
-hyperlink==21.0.0
-idna==3.7
-importlib-metadata==6.11.0
-importlib-resources==6.1.1
-incremental==22.10.0
-iniconfig==2.0.0
-ipykernel==6.29.3
-ipython==8.18.1
-ipywidgets==8.1.2
-isoduration==20.11.0
-isort==5.12.0
-itemadapter==0.8.0
-itemloaders==1.1.0
-itsdangerous==2.1.2
-jedi==0.19.1
-jieba==0.42.1
-Jinja2==3.1.6
-jmespath==1.0.1
-joblib==1.3.2
-json5==0.9.24
-jsonpatch==1.33
-jsonpath-python==1.0.6
-jsonpointer==2.4
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.10.0
-jupyter-lsp==2.2.4
-jupyter_client==8.6.1
-jupyter_core==5.7.2
-jupyter_server==2.14.1
-jupyter_server_terminals==0.5.3
-jupyterlab==4.2.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.25.4
-jupyterlab_widgets==3.0.10
-kiwisolver==1.4.5
-kubernetes==29.0.0
-langchain==0.3.7
-langchain-community==0.3.1
-langchain-core==0.3.15
-langchain-text-splitters==0.0.1
-langdetect==1.0.9
-langsmith==0.1.31
-lxml==4.9.3
-makefun==1.15.2
-Markdown==3.5.2
-MarkupSafe==2.1.3
-marshmallow==3.21.1
-matplotlib==3.8.1
-matplotlib-inline==0.1.6
-mccabe==0.7.0
-mistune==3.0.2
-mmh3==4.1.0
-mock==5.1.0
-monotonic==1.6
-mpmath==1.3.0
-multidict==6.0.4
-mypy-extensions==1.0.0
-nbclient==0.10.0
-nbconvert==7.16.3
-nbformat==5.10.3
-nest-asyncio==1.6.0
-networkx==3.2.1
-nltk==3.8.1
-notebook==7.1.2
-notebook_shim==0.2.4
-numpy==2.3.1
-oauthlib==3.2.2
-onnxruntime==1.22.0
-openai==1.13.3
-opencv-python==4.8.1.78
-openpyxl==3.1.2
-opentelemetry-api==1.23.0
-opentelemetry-exporter-otlp-proto-common==1.23.0
-opentelemetry-exporter-otlp-proto-grpc==1.23.0
-opentelemetry-instrumentation==0.44b0
-opentelemetry-instrumentation-asgi==0.44b0
-opentelemetry-instrumentation-fastapi==0.44b0
-opentelemetry-proto==1.23.0
-opentelemetry-sdk==1.23.0
-opentelemetry-semantic-conventions==0.44b0
-opentelemetry-util-http==0.44b0
-orjson==3.9.15
-outcome==1.3.0.post0
-overrides==7.7.0
-packaging==23.2
-pandas==2.1.2
-pandocfilters==1.5.1
-parsel==1.8.1
-parso==0.8.3
-pexpect==4.9.0
-Pillow==10.1.0
-platformdirs==3.11.0
-pluggy==1.3.0
-posthog==3.5.0
-pretty-errors==1.2.25
-prometheus_client==0.20.0
-prompt-toolkit==3.0.43
-Protego==0.3.0
-protobuf==4.25.3
-psutil==5.9.8
-ptyprocess==0.7.0
-pulsar-client==3.4.0
-pure-eval==0.2.2
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycodestyle==2.11.1
-pycparser==2.21
-pydantic==2.6.3
-pydantic_core==2.16.3
-PyDispatcher==2.0.7
-pyflakes==3.1.0
-Pygments==2.17.2
-pylint==3.0.2
-PyMySQL==1.1.0
-pyOpenSSL==23.3.0
-pyparsing==3.1.1
-PyPika==0.48.9
-pyproject-api==1.6.1
-pyproject_hooks==1.0.0
-PySocks==1.7.1
-pytesseract==0.3.10
-pytest==7.4.3
-pytest-cov==4.1.0
-python-dateutil==2.8.2
-python-dotenv==1.0.1
-python-iso639==2024.2.7
-python-json-logger==2.0.7
-python-magic==0.4.27
-pytz==2023.3.post1
-PyYAML==6.0.1
-pyzmq==25.1.2
-qtconsole==5.5.1
-QtPy==2.4.1
-queuelib==1.6.2
-rapidfuzz==3.6.1
-redis==5.0.1
-referencing==0.34.0
-regex==2023.12.25
-requests==2.31.0
-requests-file==1.5.1
-requests-oauthlib==1.4.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.18.0
-rsa==4.9
-scikit-learn==1.3.2
-scipy==1.11.3
-Scrapy==2.11.0
-scrapy-redis==0.7.3
-seaborn==0.13.0
-selenium==4.15.2
-Send2Trash==1.8.2
-service-identity==23.1.0
-six==1.16.0
-sniffio==1.3.0
-snownlp==0.12.3
-sortedcontainers==2.4.0
-soupsieve==2.5
-SQLAlchemy==2.0.23
-sqlparse==0.4.4
-stack-data==0.6.3
-starlette==0.36.3
-sympy==1.12
-tabulate==0.9.0
-tenacity==8.2.3
-terminado==0.18.1
-threadpoolctl==3.2.0
-tinycss2==1.2.1
-tldextract==5.1.0
-tokenizers==0.15.2
-tomli==2.0.1
-tomlkit==0.12.2
-torch==2.1.0
-torchdata==0.7.0
-torchtext==0.16.0
-tornado==6.4
-tox==4.11.3
-tqdm==4.66.1
-traitlets==5.14.2
-trio==0.23.1
-trio-websocket==0.11.1
-Twisted==22.10.0
-typer==0.9.0
-types-python-dateutil==2.9.0.20240316
-typing-inspect==0.9.0
-typing_extensions==4.8.0
-tzdata==2023.3
+gradio==4.22.0
 unstructured==0.12.6
-unstructured-client==0.18.0
-uri-template==1.3.0
-urllib3==2.0.7
-uvicorn==0.29.0
-uvloop==0.19.0
-virtualenv==20.24.6
-w3lib==2.1.2
-watchfiles==0.21.0
-wcwidth==0.2.13
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.7.0
-websockets==12.0
-Werkzeug==3.0.1
-widgetsnbextension==4.0.10
-wikipedia==1.4.0
-wrapt==1.16.0
-wsproto==1.2.0
-xlrd==2.0.1
-yarl==1.9.3
-zipp==3.17.0
-zope.interface==6.1
+google-search-results==2.4.2
+tiktoken==0.7.0
+docarray==0.40.0
+matplotlib==3.8.3
+plotly==5.20.0
+numpy==1.26.4
+scikit-learn==1.5.0
+pandas==2.2.1
